--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,8 @@ dependencies {
     //swipe referesh
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
+    //gson
+    implementation 'com.google.code.gson:gson:2.8.8'
+
+
 }
