--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,10 +18,14 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     buildFeatures {
         dataBinding = true
+        compose true
     }
     buildTypes {
         release {
@@ -35,6 +39,16 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        useIR = true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerVersion '1.5.21'
+    }
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
     }
 }
 
@@ -45,6 +59,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation 'androidx.activity:activity-compose:1.3.0-alpha06'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -54,6 +73,7 @@ dependencies {
 
     // glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     //swipe referesh
@@ -61,6 +81,11 @@ dependencies {
 
     //gson
     implementation 'com.google.code.gson:gson:2.8.8'
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
+    implementation 'id.zelory:compressor:3.0.1'
+    implementation 'com.googlecode.libphonenumber:libphonenumber:8.11.2'
+
 
 
 }
